<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.settings.account.ForgotPasswordFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/reset_password"
            android:textColor="@color/login_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/text_send_email"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/tv_noti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/send_reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>


    </LinearLayout>
</layout>