<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vuongvanduy.music.ui.settings.account.AccountViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ui.settings.account.AccountFragment">

        <!-- TODO: Update blank fragment layout -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:lines="1"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{viewModel.isShowSignOut() ? View.GONE : View.VISIBLE}">

            <Button
                android:id="@+id/bt_sign_in"
                style="@style/BaseButtonLogin"
                android:layout_width="130dp"
                android:layout_margin="10dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/sign_in" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.isShowSignOut() ? View.VISIBLE : View.GONE}">

            <Button
                android:id="@+id/bt_change_profile"
                style="@style/BaseButtonLogin"
                android:layout_width="300dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/change_profile" />

            <Button
                android:id="@+id/bt_change_password"
                style="@style/BaseButtonLogin"
                android:layout_width="200dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/orange"
                android:text="@string/change_password" />

            <Button
                android:id="@+id/bt_sign_out"
                style="@style/BaseButtonLogin"
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/red"
                android:text="@string/sign_out" />

        </LinearLayout>

    </LinearLayout>
</layout>