<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ui.settings.account.ProfileFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/change_profile"
            android:textColor="@color/login_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_avatar_error" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:lines="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/text_color" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BaseTextInputLayoutForLogin"
            android:hint="@string/name_hint"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                style="@style/BaseEditTextForLogin"
                android:inputType="textPersonName"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_update_profile"
            style="@style/BaseButtonLogin"
            android:backgroundTint="@color/yellow"
            android:text="@string/update_profile" />

    </LinearLayout>
</layout>