<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ui.settings.account.ChangePasswordFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/change_password"
            android:textColor="@color/login_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BaseTextInputLayoutForLogin"
            android:hint="@string/password_hint"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_old_password"
                style="@style/BaseEditTextForLogin"
                android:inputType="textPassword"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BaseTextInputLayoutForLogin"
            android:hint="@string/new_password_hint"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_new_password"
                style="@style/BaseEditTextForLogin"
                android:inputType="textPassword"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BaseTextInputLayoutForLogin"
            android:hint="@string/confirm_password_hint"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_password"
                style="@style/BaseEditTextForLogin"
                android:inputType="textPassword"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_change_password"
            style="@style/BaseButtonLogin"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/tv_noti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>
</layout>